<resources>
    <string name="app_name">Unomap</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_button">Sign In</string>
    <string name="unomap_name">Your name in Unomap</string>
    <string name="name">Username:</string>
    <string name="rmb_me">Remember me.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="retype_password">Re-type Password:</string>
    <string name="sign_up_page">Welcome, This is the sign up page</string>
    <string name="hint_email">Email address</string>
    <string name="hint_phone_number">Handphone number</string>
    <string name="phone_number">Phone number:</string>
    <string name="hint_username">Full name as in NRIC</string>
    <string name="hint_password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hint_name"></string>
    <string name="camera">Camera</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
<string name="test_email">info@unomap.com</string>
    <string name="test_phonenumber">012-3456789</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="pin">PIN</string>
    <string name="security_enquiry">Please set up</string>
    <string name="pin_number">Enter PIN:</string>
    <string name="retype_pin_number">Re-enter PIN:</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="terms_and_condition_text">1. Testing line 1 \n2. Testing line 2</string>
    <string name="private_policy_text">Your privacy is our utmost concern. The privacy policy of Unomap explains how we manage and keep your personal information when you sign up and use our services. It also describes the choices available to you regarding the use of, your access to, and how to update and correct your personal information. Please read it carefully before you sign up.\n\n1. Who are we\nWe are Unomap Technology (M) Sdn Bhd, Address (company number X), a.k.a. Unomap.\n\nOur general email address is info@unomap.com.\n\nIn this policy, “we”, “us”, “our” mean Unomap; while “third party” means anyone other than you and us, which could be another person or organization.</string>
    <string name="pp2">\n2. Our principles\nWe take your privacy very seriously. Every part of our services, inside out, is designed with privacy at their heart. We commit to maintaining your trust and pledge the followings:</string>
    <string name="pp2a">Keep you informed of our privacy practices and any future change on them happened to keep privacy upheld.</string>
    <string name="pp2b">Keep your information safe. At the best we can, that matches industry standards, we implemented security tools designated to safeguard your information.</string>
    <string name="pp2c">Any sharing of your information with third parties from our end will be made at your consent. In accordance to this Privacy Policy.</string>
    <string name="pp22">\nIf you have any questions about the security of your personal information with Unomap, kindly contact us at support@unomap.com.</string>
    <string name="pp3">\n3.	Information collection\nInformation about you we collect at your account creation:</string>
    <string name="pp3a">Name as per NRIC</string>
    <string name="pp3b">Email address</string>
    <string name="pp3c">Contact number</string>
    <string name="pp33">\nInformation that we collect automatically when you use our services:</string>
    <string name="pp33a">Log information of your use of our services, including the time of usage, IP address, browser type, pages viewed and page you visited before landing to our online services.</string>
    <string name="pp33b">Device information which you used to access our services, including the hardware model, operating system, unique device identifiers and mobile network information.</string>
    <string name="pp33c">Location information may also be collected when you use our services.</string>
    <string name="pp33d">Other collection made by us and/or third parties such as Cookies, that are stored on your hard drive or in device memory that help us improve our online services and your experience, and to see which areas and features of our online services are popular. You can anyway disable cookies.</string>
    <string name="pp333">\nAdding of additional personal information:
        \nWhen you choose to add information to your account in the app, we collect surface details of your identity document (for example your NRIC number, passport number, student ID). This information is collected to have your provided additional identities verified by your identity providers (IdPs). With the verifies information, you will then be able to use them in the digital form through Unomap, and only you can use them as they are verified for your account only.
        \n\nWhen you back up your account to your own cloud:
        \nWe store an encrypted key in the cloud you choose for back up so that you can recover access to your account on a different phone.
        \n\nWhen you lose access to your Unomap account (for example, you have lost your mobile phone, can’t log in and need to recover access to it):
        \nWe will retrieve the encrypted key from your cloud to restore your link to your account.
        \nWe will request you enter your PIN and key-in OTP sent to your email and/or mobile number.
        \nIf you forget your PIN we will ask you for your mobile number and other possible verifiers attached to your Unomap account.</string>
    <string name="pp333a">To verify your identity and check you are the true holder of the Unomap account and grant you access to it again or to reset your PIN.</string>
    <string name="pp333b">While we verify your identity we keep the information but our Security and Customer Support Team can access it. We can access this information for up to 7 days after verification.</string>
    <string name="pp4">\n4.	Sharing your personal information with others
        \nUnomap’s core principles are that it is not our business model to sell, transfer or share outside the company any of the personal information used to set up your account or your user activity information. There are though some situations where we may share information about you as follows or as otherwise described in this Privacy Policy:</string>
    <string name="pp4a">with Unomap partners as part of the delivery of our Services to you:
        \nwith affiliates, consultants, and other service providers when we believe it will enhance the Services and products we can provide to you or for legal and routine business reasons. For example, we may share selected details when checking your identity for idicators of fraud during sign up or when providing alerts. These parties are authorized to use your personal information only as necessary to provide these services to us.</string>
    <string name="pp4b">as required or permitted by law, such as to disclose personal data in response to lawful requests by public authorities, including to meet national security or law enforcement requirements, comply with a subpoena, bankruptcy proceedings, or similar legal process:
        \nGiven that we believe in good faith that such disclosure is no more than necessary to comply with legal requirements. We may share information with third parties where appropriate to protect against fraud or verify or enforce our terms of use, our other rights, or other applicable policies.</string>
    <string name="pp4c">We may also share aggregated or de-identified information, which cannot reasonably be used to identify you.</string>
    <string name="pp4d">If Unomap is sold or combined with another business.
        \n\nUnomap will agree to the sale or being combined with another business if the new business commits to the core Unomap principles of data privacy. While we are negotiating with the company buying or combining Unomap with their own business, they won’t be able to access your encrypted personal information but Unomap may provide anonymized statistical information.</string>
    <string name="pp5">\n5.	Your rights</string>
    <string name="pp5a">Access rights: You are entitled to see the personal information we hold about you, and medium to which your personal information is linked. .
        \nAccess can be done through Unomap app and Unomap web platform.</string>
    <string name="pp5b">Correction rights: You are entitled to correct personal information we hold about you that you found inaccurate and/or outdated.
        \nYou can update your information we hold at any time through your account, where certain updates will require your provision of relevant document, while some will be done automatically at IdPs end linked to us and your account.</string>
    <string name="pp5c">Deletion rights: in certain circumstances you are entitled to ask us to delete the personal information we hold about you through Unomap app or website.</string>
    <string name="pp5d">Objection rights: in certain circumstances you are entitled to object to Yoti processing your personal information.
        \nYou can do so by emailing us at support@unomap.com.</string>
    <string name="pp5e">Cookies: Most web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove or reject browser cookies. Please note that if you choose to remove or reject cookies, this could affect the availability and functionality of our online services.</string>
    <string name="info1">By continuing, you agree to   </string>
    <string name="info_click1"> Unomap\'s Terms and Conditions</string>
    <string name="info2"> and </string>
    <string name="info_click2">Privacy Policy</string>
    <string name="verified_info1">A verification code has been sent to the phone number</string>
    <string name="verified_info2">Please enter the verification code in the sms. </string>
    <string name="verified_code">Verification code:</string>
    <string name="verify">Verify</string>
    <string name="university">University</string>
    <string name="university_card_no">Card no.</string>
    <string name="university_faculty">Faculty</string>
    <string name="university_course">Course</string>
    <string name="university_period">Period</string>
    <string name="uni_card_no_hint">Matric card number</string>
    <string name="uni_faculty_hint">Name of your faculty</string>
    <string name="uni_course_hint">Full name of your course</string>
    <string name="uni_period_hint">Course period (eg: 2017-2020)</string>
    <string name="id_add">Add ID</string>
</resources>