<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/front_page"
        android:alpha="0.1"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_add"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/colorunomap"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/addid_ll1"
        android:layout_above="@+id/addid_ll2a">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/university"
            android:textSize="15sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"/>

        <Spinner
            android:id="@+id/static_spinner_uni_name"
            android:layout_width="225sp"
            android:layout_height="35sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="3sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:spinnerMode="dropdown"
            ></Spinner>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@id/addid_ll2a"
        android:layout_above="@+id/addid_ll2"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@id/addid_ll2"
        android:layout_above="@+id/addid_ll3">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/university_card_no"
            android:textSize="15sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"/>
        <EditText
            android:layout_width="225sp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintColor"
            android:textSize="15sp"
            android:layout_margin="5sp"
            android:id="@+id/uni_number"
            android:hint="@string/uni_card_no_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/addid_ll4"
        android:id="@id/addid_ll3">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/university_faculty"
            android:textSize="15sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"/>
        <EditText
            android:layout_width="225sp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintColor"
            android:textSize="15sp"
            android:id="@+id/uni_faculty"
            android:layout_margin="5sp"
            android:hint="@string/uni_faculty_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"

        android:id="@id/addid_ll4"
        >
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/university_course"
            android:textSize="15sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"/>
        <EditText
            android:layout_width="225sp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintColor"
            android:textSize="15sp"
            android:layout_margin="5sp"
            android:id="@+id/uni_course"
            android:hint="@string/uni_course_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/addid_ll5"
        android:layout_below="@id/addid_ll4">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/university_period"
            android:textSize="15sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"/>
        <EditText
            android:layout_width="225sp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintColor"
            android:id="@+id/uni_period"
            android:textSize="15sp"
            android:layout_margin="5sp"
            android:hint="@string/uni_period_hint"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:onClick="openCamera"
        android:background="@drawable/rounded_corner2"
        android:textColor="#ffffff"
        android:layout_margin="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_add"
        android:background="@drawable/rounded_corner2"
        android:textColor="#ffffff"
        android:layout_margin="20dp"
        android:onClick="add"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>





</RelativeLayout>