<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/front_page"
        android:alpha="0.1"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/activity_main_unomaplogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/identifyslogo" />
        <TextView
            android:id="@+id/activity_main_unomaplogoname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_below="@id/activity_main_unomaplogo"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>



    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_above="@+id/sign_up_page_name"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@id/sign_up_page_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/unomap_name"
        android:layout_above="@+id/sign_up_phone_number_textview"
        android:layout_centerHorizontal="true"
        android:textColorHint="#5fe1c2"
        android:textColor="#5fe1c2"
        android:textSize="14sp"
        android:maxLines="1"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:id="@+id/sign_up_page_fullname">

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="14sp"
        android:visibility="gone"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/sign_up_page_firstname"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textColorHint="#5fe1c2"
        android:textColor="#5fe1c2"
        android:hint="@string/first_name"
        android:textSize="14sp"
        android:maxLines="1"
        android:visibility="gone"
        />
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="14sp"
                android:visibility="gone"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/sign_up_page_lastname"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textColorHint="#5fe1c2"
                android:textColor="#5fe1c2"
                android:hint="@string/last_name"
                android:textSize="14sp"
                android:maxLines="1"
                android:visibility="gone"
                />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_above="@+id/sign_up_page_phone_number_edittext"
        android:textSize="14sp"
        android:id="@id/sign_up_phone_number_textview"
        android:layout_centerHorizontal="true"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@id/sign_up_page_phone_number_edittext"
        android:layout_width="200dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number"
        android:layout_centerHorizontal="true"
        android:inputType="phone"
        android:textColorHint="#5fe1c2"
        android:textColor="#5fe1c2"
        android:textSize="14sp"
        android:maxLines="1"
        />

    <TextView

        android:id="@+id/sign_up_email_textview"
        android:text="@string/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_page_phone_number_edittext"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/user_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColorHint="#5fe1c2"
        android:textColor="#5fe1c2"
        android:inputType="textEmailAddress"
        android:layout_below="@id/sign_up_email_textview"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:maxLines="1"
        />


    <RelativeLayout
        android:id="@+id/info_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_email"

        android:layout_margin="10dp"
        android:textSize="8sp"
        tools:ignore="SmallSp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/info11">
        <TextView
            android:id="@+id/info1"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info1"
            android:textSize="9sp"/>
        <TextView

            android:layout_toEndOf="@id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_click1"
            android:onClick="tnc"
            android:textColor="#0000ff"
            android:textSize="9sp"
            android:layout_marginStart="04sp"/>

            </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/info11">
        <TextView

            android:id="@+id/info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info2"
            android:textSize="9sp"/>
        <TextView
            android:layout_toEndOf="@id/info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_click2"
            android:onClick="pp"
            android:textColor="#0000ff"
            android:textSize="9sp"
            android:layout_marginStart="04sp"/>
            </RelativeLayout>
    </RelativeLayout>






    <android.support.v7.widget.AppCompatButton
        android:text="@string/next"
        android:id="@+id/sign_up_page_button_signup"
        android:layout_below="@id/info_field"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#5fe1c2"
        android:onClick="next"
        android:textSize="14sp"
        android:background="@drawable/rounded_corner2"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        />

</RelativeLayout>