<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/activity_main_unomaplogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/identifyslogo" />
        <TextView
            android:id="@+id/activity_main_unomaplogoname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_below="@id/activity_main_unomaplogo"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <TextView
        android:text="@string/verified_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verification_page_email"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"/>
    <TextView
        android:text="@string/test_email"
        android:id="@id/verification_page_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/info2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="12sp"/>

    <TextView
        android:id="@id/info2"
        android:text="@string/verified_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verification_page_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"/>



    <TextView

        android:id="@id/verification_page_textview"
        android:text="@string/verified_code"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="14sp"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/user_verification_code"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColorHint="#5fe1c2"
        android:textColor="#5fe1c2"
        android:inputType="number"
        android:layout_below="@id/verification_page_textview"
        android:maxLength="6"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        />


    <android.support.v7.widget.AppCompatButton
        android:text="@string/verify"
        android:id="@+id/verification_page_button_verify"
        android:layout_below="@id/user_verification_code"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#5fe1c2"
        android:onClick="verify"
        android:textSize="14sp"
        android:background="@drawable/rounded_corner5"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        />


    <android.support.v7.widget.AppCompatButton
        android:text="@string/back"
        android:id="@+id/sign_up_page_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#5fe1c2"
        android:onClick="back"
        android:textSize="14sp"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"

        />

</RelativeLayout>